# rust-fpga-arch-visualizer

./: .clippy.toml  .firebaserc  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  NOTES.md  README.md  RELEASE.md  firebase.json
.github/: dependabot.yml
.github/workflows/: firebase-hosting-pull-request.yml  firebase-hosting-release.yml  rust.yml
crr_sb_parser/: Cargo.toml
crr_sb_parser/src/: crr_sb_des.rs  crr_sb_parse_error.rs  lib.rs  parse_common.rs  parse_sb_col_headers.rs  parse_sb_rows.rs  parse_sink_nodes.rs
crr_sb_parser/tests/: integration_test.rs  sb_autogen_w8_fw10_fi8_f04.csv  sb_template_1.csv  sb_template_2.csv  sb_template_3.csv
fpga_arch_parser/: Cargo.toml
fpga_arch_parser/src/: arch.rs  complex_block_graph.rs  lib.rs  parse_complex_block_list.rs  parse_custom_switch_blocks.rs  parse_device.rs  parse_direct_list.rs  parse_error.rs  parse_layouts.rs  parse_metadata.rs  parse_models.rs  parse_noc.rs  parse_port.rs  parse_segment_list.rs  parse_switch_list.rs  parse_tiles.rs  parse_timing.rs  tile_pin_mapper.rs  verify_noc.rs
fpga_arch_parser/tests/: integration_test.rs  k4_N4_90nm.xml  k6_frac_N10_40nm.xml  k6_frac_N10_frac_chain_mem32K_40nm_with_a_2x2_mesh_noc_topology.xml  z1010.xml  z1060.xml
fpga_arch_viewer/: Cargo.toml  index.html
fpga_arch_viewer/assets/: manifest.json  sw.js
fpga_arch_viewer/src/: block_style.rs  color_scheme.rs  common_ui.rs  complex_block_view.rs  crr_sb_view.rs  error_report.rs  grid.rs  grid_renderer.rs  grid_view.rs  hierarchy_tree.rs  inter_tile_view.rs  intra_block_drawing.rs  intra_color_scheme.rs  intra_hierarchy_tree.rs  intra_tile.rs  intra_tile_view.rs  main.rs  primitive_view.rs  samples.rs  settings.rs  summary_view.rs  tile_view.rs  viewer.rs
fpga_arch_viewer/src/complex_block_rendering/: complex_block_render_state.rs  complex_block_renderer.rs  mod.rs  primitive_renderer.rs
fpga_arch_viewer/src/crr_view/: mod.rs  parse_sb_maps_yaml.rs
fpga_arch_viewer/src/tile_rendering/: mod.rs  tile_pin_mapper.rs  tile_renderer.rs
fpga_arch_viewer/tests/: parse_only.rs
fpga_arch_viewer/tests/fixtures/: invalid_arch.xml
