[package]
name = "fpga_arch_viewer"
version = "0.3.2"
edition = "2024"
repository = "https://github.com/AlexandreSinger/rust-fpga-arch-visualizer"

[dependencies]
fpga_arch_parser = { path = "../fpga_arch_parser" }

# GUI framework - using egui for cross-platform support
eframe = "0.32"
egui = "0.32"
egui_extras = "0.32"

# File dialog for opening architecture files
rfd = "0.17"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.70"              # to access the DOM (to hide the loading text)
